--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.3.1",
     "font-awesome": "^4.7.0",
     "next": "13.4.19",
+    "openai": "^4.5.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
