--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -18,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.1",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.7",
     "next": "13.4.19",
     "openai": "^4.5.0",
     "postcss": "8.4.29",
